; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_stash.c_build_tree_from_index.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_stash.c_build_tree_from_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i32*)* @build_tree_from_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @build_tree_from_index(i32** %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @git_index_write_tree_to(i32* %9, i32* %10, i32* %11)
  store i32 %12, i32* %8, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* %8, align 4
  store i32 %15, i32* %4, align 4
  br label %20

16:                                               ; preds = %3
  %17 = load i32**, i32*** %5, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @git_tree_lookup(i32** %17, i32* %18, i32* %9)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %16, %14
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @git_index_write_tree_to(i32*, i32*, i32*) #1

declare dso_local i32 @git_tree_lookup(i32**, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
